# plantOS

./: .coderabbit.yaml  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/actions/android-setup/: action.yml
.github/actions/common-ts-setup/: action.yml
.github/workflows/: app_ci.yml  ts_ci.yml  ts_typecheck.yml  zone_ci.yml
admin-protocol-tests/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
admin-protocol-tests/src/: admin.test.ts  handlers.ts  test-utils.ts
admin-protocol-tests/src/proto-generated/: admin.js
app/: settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/java/com/siesque/plantos/: MainActivity.kt  Utils.kt
app/app/src/main/java/com/siesque/plantos/data/: MockData.kt
app/app/src/main/java/com/siesque/plantos/types/: Module.kt  ModuleData.kt  ModuleStatus.kt  Statistics.kt  ZoneNode.kt
app/app/src/main/java/com/siesque/plantos/ui/components/: Heading.kt  ModuleCard.kt
app/app/src/main/java/com/siesque/plantos/ui/screens/: HomeScreen.kt  StatsScreen.kt
app/app/src/main/java/com/siesque/plantos/ui/statistics/: HomeScreen.kt  StatsScreen.kt
app/app/src/main/java/com/siesque/plantos/ui/theme/: Color.kt  Theme.kt  Type.kt
app/app/src/main/res/values/: strings.xml
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
docs/: plantos-admin-protocol-v1.md
mock-server/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
mock-server/src/: broadcast.ts  encryption.ts  handlers.ts  index.ts  main.ts  mockData.ts  proto-wrapper.ts  server.ts  session.ts  store.ts  types.ts  utils.ts
mock-server/src/handlers/: control.ts  handshake.ts  modules.ts  registry.ts  settings.ts  statistics.ts  zones.ts
mock-server/test/: integration.ts  load.ts
plantos-app/app/: build.gradle.kts
plantos-app/app/src/androidTest/java/com/siesque/plantos/: ExampleInstrumentedTest.kt
plantos-app/app/src/main/: AndroidManifest.xml
plantos-app/app/src/main/java/com/siesque/plantos/: MainActivity.kt  PlantOSWebSocketClient.kt  Utils.kt
plantos-app/app/src/main/java/com/siesque/plantos/data/: MockData.kt
plantos-app/app/src/main/java/com/siesque/plantos/types/: Statistics.kt
plantos-app/app/src/main/java/com/siesque/plantos/ui/components/: Heading.kt
plantos-app/app/src/main/java/com/siesque/plantos/ui/screens/: StatsScreen.kt
plantos-app/app/src/main/java/com/siesque/plantos/ui/theme/: Theme.kt  Type.kt
plantos-app/app/src/main/proto-generated/com/siesque/plantos/proto/admin/v1/: AdminKt.proto.kt  ErrorResponseKt.kt  GetModuleRequestKt.kt  GetModuleResponseKt.kt  GetStatisticsRequestKt.kt  GetStatisticsResponseKt.kt  GetZoneRequestKt.kt  GetZoneResponseKt.kt  GetZoneSettingsRequestKt.kt  GetZoneSettingsResponseKt.kt  HelloKt.kt  ListModulesRequestKt.kt  ListModulesResponseKt.kt  ListZonesRequestKt.kt  ListZonesResponseKt.kt  ModuleKt.kt  (+16 more)
plantos-app/app/src/main/res/values/: themes.xml
plantos-app/app/src/test/java/com/siesque/plantos/: ExampleUnitTest.kt
plantos-app/gradle/: libs.versions.toml
plantos-combo/: build.rs
plantos-combo/src/: lora.rs  main.rs  output.rs
plantos-hub/: Cargo.toml  justfile
plantos-hub/src/: display.rs  index.html  lora.rs  main.rs  router.rs  web.rs  wifi.rs
plantos-lora-protocol/: Cargo.toml
plantos-lora-protocol/src/: lib.rs
plantos-module/: Cargo.toml  env.sh
plantos-module/src/: lora.rs  main.rs  uart.rs
plantos-zone/: Cargo.toml  build.rs  env.sh  justfile
plantos-zone-protocol/: Cargo.toml
plantos-zone-protocol/src/: lib.rs
plantos-zone/src/: main.rs  output.rs  protocol.rs  uart.rs
proto/admin/v1/: admin.proto
proto/plantos/admin/v1/: admin.proto
shared/admin-proto/: package.json  tsconfig.json
shared/admin-proto/src/: encryption.ts  index.ts
shared/admin-proto/src/proto-generated/: admin.d.ts
temp-website/: index.html  index.js  style.css
zone-protocol-tests/: Cargo.toml
zone-protocol-tests/src/: common.rs  lib.rs
